force-app/main/default/objects/Program_Question__c/Program_Question__c.object-meta.xml
<CustomObject>
    <description>Used to capture question of a Program Type</description>
    <label>Program Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Program Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>