force-app/main/default/objects/Program_Question__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Questions for the business license</inlineHelpText>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Program Questions</relationshipLabel>
    <relationshipName>Program_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>