force-app/main/default/objects/Program_Question__c/fields/Consequence__c.field-meta.xml
<CustomField>
    <fullName>Consequence__c</fullName>
    <label>Consequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Fail</fullName>
                <default>true</default>
                <label>Auto-Fail</label>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>