force-app/main/default/objects/Program_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <inlineHelpText>Correct answer of the question of a specific Program Type</inlineHelpText>
    <label>Correct Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>