force-app/main/default/objects/Program_Question__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <inlineHelpText>Response message to the user in case the user fails the eligibility.</inlineHelpText>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>