force-app/main/default/objects/Program_Question__c/fields/Program_Audience__c.field-meta.xml
<CustomField>
    <fullName>Program_Audience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Audience</label>
    <referenceTo>Program_Audience__c</referenceTo>
    <relationshipLabel>Program Questions</relationshipLabel>
    <relationshipName>Program_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>