force-app/main/default/objects/Program_Question__c/fields/Program_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Program_Type_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Type</label>
    <referenceTo>Program_Audience__c</referenceTo>
    <relationshipLabel>Program Questions (Program Type)</relationshipLabel>
    <relationshipName>Program_Questions1_del</relationshipName>
    <type>Lookup</type>
</CustomField>