force-app/main/default/objects/Program_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>Question of the Program Type</inlineHelpText>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Program Questions</relationshipLabel>
    <relationshipName>Program_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>