force-app/main/default/objects/Program_Question__c/fields/ReponseField__c.field-meta.xml
<CustomField>
    <fullName>ReponseField__c</fullName>
    <inlineHelpText>hidden field on backend for .js response value in Eligibility Question in product info</inlineHelpText>
    <label>ReponseField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>