force-app/main/default/objects/Program_Question__c/recordTypes/Question_with_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>Question_with_Endorsement</fullName>
    <active>true</active>
    <label>Question with Product Detail</label>
</RecordType>