force-app/main/default/objects/Program_Question__c/recordTypes/Question_With_Licenses.recordType-meta.xml
<RecordType>
    <fullName>Question_With_Licenses</fullName>
    <active>true</active>
    <label>Question With Licenses</label>
</RecordType>