force-app/main/default/objects/Program_Question__c/recordTypes/Question_With_Program_Type.recordType-meta.xml
<RecordType>
    <fullName>Question_With_Program_Type</fullName>
    <active>true</active>
    <label>Question With Program Type</label>
</RecordType>