force-app/main/default/objects/Program_Question__c/recordTypes/Question_With_Quote.recordType-meta.xml
<RecordType>
    <fullName>Question_With_Quote</fullName>
    <active>false</active>
    <label>Question With Quote</label>
</RecordType>